[package]
name = "design-4"
version = "0.1.0"
edition = "2024"

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
rand = "0.9.0"
ratatui = "0.29.0"
sha3 = "0.10.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
append-only-vec = "0.1.7"
tokio = { version = "1", features = ["full"] }