# SPDX-FileCopyrightText: 2024 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Leon Matthes <leon.matthes@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "cxx-qt-todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.141"
cxx-qt = "0.7.0"
cxx-qt-lib.version = "0.7.0"
cxx-qt-lib.features = ["full"]

[build-dependencies]
cxx-qt-build.version = "0.7.0"
cxx-qt-build.features = ["link_qt_object_files"]
